[gd_scene load_steps=4 format=3 uid="uid://dugar0nsw2mdu"]

[ext_resource type="Script" path="res://scripts/dialog_box.gd" id="1_726dr"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ss42u"]
bg_color = Color(0.158472, 0.158472, 0.158472, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nhp7s"]
bg_color = Color(0.247059, 0.247059, 0.247059, 1)

[node name="DialogBox" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_726dr")
user_message_color = Color(0, 1, 0, 1)
ai_message_color = Color(0, 1, 0, 1)

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 260.0
offset_bottom = 360.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.701961)

[node name="MarginContainer" type="MarginContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/MarginContainer"]
layout_mode = 2

[node name="ChatDisplay" type="RichTextLabel" parent="ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
scroll_following = true

[node name="StatusLabel" type="Label" parent="ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ProviderButton" type="OptionButton" parent="ColorRect/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RetryButton" type="Button" parent="ColorRect/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "重试"

[node name="ClearButton" type="Button" parent="ColorRect/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "清空"

[node name="HBoxContainer2" type="HBoxContainer" parent="ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="UserInput" type="TextEdit" parent="ColorRect/MarginContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_ss42u")
placeholder_text = "输入消息... (Enter发送，Ctrl+Enter换行)"
wrap_mode = 1

[node name="SendButton" type="Button" parent="ColorRect/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "发送"

[node name="BackButton" type="Button" parent="ColorRect"]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 34.0
offset_bottom = 38.0
theme_override_font_sizes/font_size = 20
theme_override_styles/focus = SubResource("StyleBoxFlat_nhp7s")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxFlat_nhp7s")
theme_override_styles/disabled = SubResource("StyleBoxFlat_nhp7s")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_nhp7s")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_nhp7s")
theme_override_styles/hover_mirrored = SubResource("StyleBoxFlat_nhp7s")
theme_override_styles/hover = SubResource("StyleBoxFlat_nhp7s")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxFlat_nhp7s")
theme_override_styles/pressed = SubResource("StyleBoxFlat_nhp7s")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_nhp7s")
theme_override_styles/normal = SubResource("StyleBoxFlat_nhp7s")
text = "<"

[node name="HTTPRequest" type="HTTPRequest" parent="."]
